<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_megagone"
            android:title="@string/compartilhar_experi_ncia" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/ic_lupa"
            android:title="@string/visualize_as_ocorr_ncias_de_sua_prefer_ncia_no_mapa" />
        <item
            android:id="@+id/nav_list"
            android:icon="@mipmap/ic_oquetarolando"
            android:title="@string/visualize_as_ltimas_ocorr_ncias_em_uma_lista_ordenada_por_data" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_avatar_novo_01"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_config_generico_01"
            android:title="@string/configura_es" />
        <item android:title="@string/opc_es">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/compartilhe" />
                <item
                    android:id="@+id/nav_adds"
                    android:icon="@drawable/ic_attach_money"
                    android:title="@string/help_us" />
                <item
                    android:id="@+id/nav_exit"
                    android:icon="@drawable/ic_action_exit"
                    android:title="@string/sair" />
            </menu>
        </item>

    </group>


</menu>
