<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="10dp"
    android:paddingRight="0dp"
    android:paddingTop="70dp"
    tools:context=".view.ActivityConfig">

    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="left|top"
        android:background="#f1f1f1">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_row="0"
            android:text="@string/configura_es"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minhas_ocorr_ncias"
            android:id="@+id/switchMy"
            android:layout_row="1"
            android:layout_column="0"
            android:checked="false" />

        <TextView
            android:id="@+id/txtViewSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/selecione_as_dist_ncias_para_filtrar"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/seekBarDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="26dp"
            android:max="10"
            android:layout_row="3"
            android:layout_column="0" />


        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/informe_seu_celular_para_receber_informativos_via_sms_iremos_enviar_alertas_quando_seu_dispositivo_estiver_em_rea_de_ocorr_ncias_de_sua_pref_rencia"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/txtTelefoneConfig"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:ems="10"
            android:inputType="phone"
            android:text="+55 48 9999-9999" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/informe_os_tipos_de_ocorr_ncia_que_deseja_visualizar"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ScrollView
            style="@style/scrollbar_shape_style"
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_column="0"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:layout_row="7"
            android:layout_margin="0dp"
            android:layout_marginLeft="3dp"
            android:layout_rowSpan="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/chkSaude"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/icon_health01"
                    android:checked="true"
                    android:text="@string/saude"
                    android:layout_margin="0dp" />

                <CheckBox
                    android:id="@+id/chkUpa"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/icon_upa01"
                    android:checked="true"
                    android:text="@string/upa" />

                <CheckBox
                    android:id="@+id/chkEducacao"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:drawableRight="@mipmap/icon_education01"
                    android:text="@string/educa_o" />

                <CheckBox
                    android:id="@+id/chkTransporte"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:drawableRight="@mipmap/icon_transport01"
                    android:text="@string/transporte" />

                <CheckBox
                    android:id="@+id/chkSeguranca"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:drawableRight="@mipmap/icon_security01"
                    android:checked="true"
                    android:text="@string/seguran_a" />

                <CheckBox
                    android:id="@+id/chkMeioAmbiente"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:drawableRight="@mipmap/icon_nature01"
                    android:text="@string/meio_ambiente" />

                <CheckBox
                    android:id="@+id/chkPolitica"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:drawableRight="@mipmap/icon_politics01"
                    android:text="@string/politica" />

                <CheckBox
                    android:id="@+id/chkEsporte"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:drawableRight="@mipmap/icon_sport01"
                    android:text="@string/esporte" />

                <CheckBox
                    android:id="@+id/chkImoveis"
                    android:layout_width="335dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:drawableRight="@mipmap/ic_launcher_smtc"
                    android:text="Imoveis" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btSalvarPreferencias"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:layout_row="9"
            android:background="@drawable/button_twitter"
            android:drawableLeft="@drawable/ic_save_action"
            android:enabled="true"
            android:text="@string/salvar" />

    </GridLayout>


</RelativeLayout>
