<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/app_name"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="70dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <!-- TODO: Update blank fragment layout -->

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/modal_shape_list">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/nome"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/txtNomeUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="1"
            android:ems="10"
            android:hint="Fulano da Silva Sauro"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:hint="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/nascimento"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/txtEmailUsuario"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:ems="10"
            android:hint="email@mail.com"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/txtDtNasc"
            android:layout_width="151dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:ems="10"
            android:hint="29/04/1979"

            android:inputType="date"
            android:onClick="showDatePickerDialog" />

        <RadioGroup
            android:id="@+id/radioGroupTipoPessoa"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="4">

            <RadioButton
                android:id="@+id/radioPessoaFisica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:checked="false"
                android:text="@string/pessoa_fisica" />

            <RadioButton
                android:id="@+id/radioPessoaJuridica"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:checked="false"
                android:text="@string/pessoa_juridica" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/cpf_cnpj"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"
            android:text="@string/cep"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/txtCpfCnpj"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:ems="10"
            android:hint="000.000.000-00"
            android:inputType="date" />

        <EditText
            android:id="@+id/txtCepBR"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"
            android:ems="10"
            android:hint="88020000"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="7"
            android:text="@string/complemento"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/txtComplemento"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_row="8"
            android:hint="Nr 397 APTO 101"
            android:inputType="textPostalAddress" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="9"
            android:text="@string/senha"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/txtPasswd"
            android:layout_width="149dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="10"
            android:ems="10"
            android:inputType="textPassword" />

        <android.support.v7.widget.CardView
            android:id="@+id/view2"
            android:layout_width="74dp"
            android:layout_height="74dp"
            android:layout_above="@+id/txtAuthorListView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"

            android:elevation="12dp"
            android:innerRadius="0dp"
            android:shape="ring"
            android:layout_row="9"
            android:layout_column="1"
            android:thicknessRatio="1.9"
            app:cardCornerRadius="40dp"
            android:layout_rowSpan="2">

            <ImageButton
                android:id="@+id/btAvatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="left|center_horizontal"
                 android:background="@drawable/ic_profile_img"
                android:onClick="takePhoto" />
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btSalvarPerfilUsuario"
            android:layout_width="120dp"
            android:layout_height="35dp"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_gravity="center_horizontal"
            android:layout_row="11"
            android:background="@drawable/button_home"
            android:drawableLeft="@drawable/ic_save_action"
            android:padding="5dp"
            android:text="@string/salvar" />

    </GridLayout>
</RelativeLayout>
